Fix z-indexing

--- a/src/css/bottom-sheet.css
+++ b/src/css/bottom-sheet.css
@@ -24,7 +24,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
+  z-index: 10;
 }
 
 .satlas-bottom-sheet .overlay, .satlas-bottom-sheet .sheet-container {
@@ -44,7 +44,7 @@
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  z-index: 1001;
+  z-index: 11;
   will-change: transform;
   transform: translateY(100%);
   padding-bottom: 100px;
