--- a/src/css/style.css
+++ b/src/css/style.css
@@ -281,7 +281,7 @@ body {
   background-color: rgba(0, 0, 0, 0);
   display: flex;
   justify-content: center;
-  z-index: 10;
+  z-index: 20;
   cursor: pointer;
   align-items: flex-end;
   will-change: background-color;
@@ -304,7 +304,7 @@ body {
   transform: translateY(100%);
   transition: transform 0.3s ease-out;
   will-change: transform;
-  z-index: 11; /* Ensure it's above the overlay */
+  z-index: 21; /* Ensure it's above the overlay */
   max-width: 500px;
   border: 1px solid var(--medium-gray);
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.4);
@@ -920,7 +920,7 @@ body {
   top: calc(20px + var(--safe-area-top)); /* Place below the header */
   left: 50%;
   transform: translateX(-50%);
-  z-index: 100;
+  z-index: 200;
   display: flex;
   flex-direction: column-reverse; /* Reverse the order so new items appear at the top */
   gap: 10px;
@@ -1018,7 +1018,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 200;
+  z-index: 100;
   cursor: pointer;
   padding-bottom: 0;
   bottom: 0;
@@ -1064,7 +1064,6 @@ body {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  z-index: 201;
   transition: background-color 0.2s;
 }
 
